codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_effort_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Select Reasoning Level for gpt-5.4

  1. Low                         Fast responses with lighter reasoning
› 2. Medium (default) (current)  Balances speed and reasoning depth for
                                 everyday tasks
  3. High                        Greater reasoning depth for complex problems
  4. Extra high                  Extra high reasoning depth for complex
                                 problems

  Press enter to confirm or esc to go back
