codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_effort_ultra_warning.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "&warnings[0]"
---
⚠ Ultra reasoning may proactively use multiple agents. This session is
  configured for 8 concurrent threads with up to 7 subagents which can increase
  usage quickly. Consider setting
  features.multi_agent_v2.max_concurrent_threads_per_session below 8.
